Major changes, take a look!

--- a/scraper/Development.ipynb
+++ b/scraper/Development.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -253,7 +253,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -291,6 +291,175 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "client = edgedb.create_client(dsn='MSDS_459')\n",
+    "\n",
+    "query_string = '''WITH pickups := \n",
+    "            (SELECT Guitar.pickups filter Guitar.pickups != '')\n",
+    "            \n",
+    "            SELECT DISTINCT pickups;\n",
+    "            '''\n",
+    "cutaways = client.query(query_string)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "resp = client.query(query_string)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[]"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "cutaways"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "search_dict = dict()\n",
+    "\n",
+    "guitar_props = ['body_shape','cutaway','pickups']\n",
+    "\n",
+    "for prop in guitar_props:\n",
+    "    query_string = f\"\"\"WITH property :=\n",
+    "            (SELECT Guitar.{prop} filter Guitar.{prop} != '')\n",
+    "            SELECT DISTINCT property\"\"\"\n",
+    "\n",
+    "    search_dict[prop] = client.query(query_string)    \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# find valid entries for all \"string\" fields\n",
+    "str_props = ['body_shape','cutaway','pickups', 'type', 'country_of_origin']\n",
+    "for prop in str_props:\n",
+    "    query_string = f'''WITH prop :=\n",
+    "            (SELECT Guitar.{prop} filter Guitar.{prop} != '')\n",
+    "            SELECT DISTINCT prop'''\n",
+    "    search_dict[prop] = client.query(query_string)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'body_shape': ['000-14 Fret',\n",
+       "  'Concert',\n",
+       "  'Dreadnought, 14th Fret',\n",
+       "  'Other',\n",
+       "  'Semi-hollow or chambered body',\n",
+       "  'Solid body'],\n",
+       " 'cutaway': ['Non-cutaway', 'Single cutaway', 'Single-cutaway'],\n",
+       " 'pickups': [],\n",
+       " 'type': ['Acoustic', 'Acoustic Electric', 'Classical', 'Electric', 'unknown'],\n",
+       " 'country_of_origin': []}"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "search_dict"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'body_shape': ['000-14 Fret',\n",
+       "  'Concert',\n",
+       "  'Dreadnought, 14th Fret',\n",
+       "  'Other',\n",
+       "  'Semi-hollow or chambered body',\n",
+       "  'Solid body'],\n",
+       " 'cutaway': ['Non-cutaway', 'Single cutaway', 'Single-cutaway'],\n",
+       " 'pickups': [],\n",
+       " 'type': ['Acoustic', 'Acoustic Electric', 'Classical', 'Electric', 'unknown'],\n",
+       " 'country_of_origin': [],\n",
+       " 'num_strings': [],\n",
+       " 'scale_length': [],\n",
+       " 'num_frets': []}"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "num_props = ['num_strings','scale_length','num_frets']\n",
+    "for prop in num_props:\n",
+    "    query_string = f'''WITH prop :=\n",
+    "            (SELECT Guitar.{prop} filter Guitar.{prop} != 0)\n",
+    "            SELECT DISTINCT prop'''\n",
+    "    search_dict[prop] = client.query(query_string)\n",
+    "\n",
+    "search_dict"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "IndexError",
+     "evalue": "no such group",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mIndexError\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[1;32mc:\\Users\\17204\\Documents\\git\\MSDS459_project\\scraper\\Development.ipynb Cell 27\u001b[0m in \u001b[0;36m<cell line: 2>\u001b[1;34m()\u001b[0m\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/17204/Documents/git/MSDS459_project/scraper/Development.ipynb#X35sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m test_str \u001b[39m=\u001b[39m \u001b[39m'\u001b[39m\u001b[39mAcoustic-electric\u001b[39m\u001b[39m'\u001b[39m\n\u001b[1;32m----> <a href='vscode-notebook-cell:/c%3A/Users/17204/Documents/git/MSDS459_project/scraper/Development.ipynb#X35sZmlsZQ%3D%3D?line=1'>2</a>\u001b[0m match \u001b[39m=\u001b[39m re\u001b[39m.\u001b[39;49msearch(\u001b[39m'\u001b[39;49m\u001b[39m[A|a]coustic[ |-][E|e]lectric\u001b[39;49m\u001b[39m'\u001b[39;49m, test_str)\u001b[39m.\u001b[39;49mgroup(\u001b[39m1\u001b[39;49m)\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/17204/Documents/git/MSDS459_project/scraper/Development.ipynb#X35sZmlsZQ%3D%3D?line=2'>3</a>\u001b[0m \u001b[39mmatch\u001b[39;00m\n",
+      "\u001b[1;31mIndexError\u001b[0m: no such group"
+     ]
+    }
+   ],
+   "source": [
+    "test_str = 'Acoustic-electric'\n",
+    "match = re.search('[A|a]coustic[ |-][E|e]lectric', test_str).group(0)\n",
+    "match"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
@@ -313,7 +482,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.4"
+   "version": "3.9.13"
   },
   "orig_nbformat": 4
  },
