--- a/scraper/Development.ipynb
+++ b/scraper/Development.ipynb
@@ -445,10 +445,10 @@
      "evalue": "no such group",
      "output_type": "error",
      "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mIndexError\u001b[0m                                Traceback (most recent call last)",
-      "\u001b[1;32mc:\\Users\\17204\\Documents\\git\\MSDS459_project\\scraper\\Development.ipynb Cell 27\u001b[0m in \u001b[0;36m<cell line: 2>\u001b[1;34m()\u001b[0m\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/17204/Documents/git/MSDS459_project/scraper/Development.ipynb#X35sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m test_str \u001b[39m=\u001b[39m \u001b[39m'\u001b[39m\u001b[39mAcoustic-electric\u001b[39m\u001b[39m'\u001b[39m\n\u001b[1;32m----> <a href='vscode-notebook-cell:/c%3A/Users/17204/Documents/git/MSDS459_project/scraper/Development.ipynb#X35sZmlsZQ%3D%3D?line=1'>2</a>\u001b[0m match \u001b[39m=\u001b[39m re\u001b[39m.\u001b[39;49msearch(\u001b[39m'\u001b[39;49m\u001b[39m[A|a]coustic[ |-][E|e]lectric\u001b[39;49m\u001b[39m'\u001b[39;49m, test_str)\u001b[39m.\u001b[39;49mgroup(\u001b[39m1\u001b[39;49m)\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/17204/Documents/git/MSDS459_project/scraper/Development.ipynb#X35sZmlsZQ%3D%3D?line=2'>3</a>\u001b[0m \u001b[39mmatch\u001b[39;00m\n",
-      "\u001b[1;31mIndexError\u001b[0m: no such group"
+      "\u001B[1;31m---------------------------------------------------------------------------\u001B[0m",
+      "\u001B[1;31mIndexError\u001B[0m                                Traceback (most recent call last)",
+      "\u001B[1;32mc:\\Users\\17204\\Documents\\git\\MSDS459_project\\scraper\\Development.ipynb Cell 27\u001B[0m in \u001B[0;36m<cell line: 2>\u001B[1;34m()\u001B[0m\n\u001B[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/17204/Documents/git/MSDS459_project/scraper/Development.ipynb#X35sZmlsZQ%3D%3D?line=0'>1</a>\u001B[0m test_str \u001B[39m=\u001B[39m \u001B[39m'\u001B[39m\u001B[39mAcoustic-electric\u001B[39m\u001B[39m'\u001B[39m\n\u001B[1;32m----> <a href='vscode-notebook-cell:/c%3A/Users/17204/Documents/git/MSDS459_project/scraper/Development.ipynb#X35sZmlsZQ%3D%3D?line=1'>2</a>\u001B[0m match \u001B[39m=\u001B[39m re\u001B[39m.\u001B[39;49msearch(\u001B[39m'\u001B[39;49m\u001B[39m[A|a]coustic[ |-][E|e]lectric\u001B[39;49m\u001B[39m'\u001B[39;49m, test_str)\u001B[39m.\u001B[39;49mgroup(\u001B[39m1\u001B[39;49m)\n\u001B[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/17204/Documents/git/MSDS459_project/scraper/Development.ipynb#X35sZmlsZQ%3D%3D?line=2'>3</a>\u001B[0m \u001B[39mmatch\u001B[39;00m\n",
+      "\u001B[1;31mIndexError\u001B[0m: no such group"
      ]
     }
    ],
