Initial Function Key/Value search

--- a/scraper/Development.ipynb
+++ b/scraper/Development.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -88,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -336,7 +336,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -354,7 +354,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -362,14 +362,14 @@
     "str_props = ['body_shape','cutaway','pickups', 'type', 'country_of_origin']\n",
     "for prop in str_props:\n",
     "    query_string = f'''WITH prop :=\n",
-    "            (SELECT Guitar.{prop} filter Guitar.{prop} != '')\n",
+    "            (SELECT str_lower(Guitar.{prop}) filter Guitar.{prop} != '')\n",
     "            SELECT DISTINCT prop'''\n",
     "    search_dict[prop] = client.query(query_string)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -382,12 +382,10 @@
        "  'Semi-hollow or chambered body',\n",
        "  'Solid body'],\n",
        " 'cutaway': ['Non-cutaway', 'Single cutaway', 'Single-cutaway'],\n",
-       " 'pickups': [],\n",
-       " 'type': ['Acoustic', 'Acoustic Electric', 'Classical', 'Electric', 'unknown'],\n",
-       " 'country_of_origin': []}"
+       " 'pickups': []}"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -398,7 +396,57 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'search_dict' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32mc:\\Users\\17204\\Documents\\git\\MSDS459_project\\scraper\\Development.ipynb Cell 26\u001b[0m in \u001b[0;36m<cell line: 2>\u001b[1;34m()\u001b[0m\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/17204/Documents/git/MSDS459_project/scraper/Development.ipynb#X34sZmlsZQ%3D%3D?line=1'>2</a>\u001b[0m \u001b[39mfor\u001b[39;00m prop \u001b[39min\u001b[39;00m num_props:\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/17204/Documents/git/MSDS459_project/scraper/Development.ipynb#X34sZmlsZQ%3D%3D?line=2'>3</a>\u001b[0m     query_string \u001b[39m=\u001b[39m \u001b[39mf\u001b[39m\u001b[39m'''\u001b[39m\u001b[39mWITH prop :=\u001b[39m\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/17204/Documents/git/MSDS459_project/scraper/Development.ipynb#X34sZmlsZQ%3D%3D?line=3'>4</a>\u001b[0m \u001b[39m            (SELECT Guitar.\u001b[39m\u001b[39m{\u001b[39;00mprop\u001b[39m}\u001b[39;00m\u001b[39m filter Guitar.\u001b[39m\u001b[39m{\u001b[39;00mprop\u001b[39m}\u001b[39;00m\u001b[39m != 0)\u001b[39m\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/17204/Documents/git/MSDS459_project/scraper/Development.ipynb#X34sZmlsZQ%3D%3D?line=4'>5</a>\u001b[0m \u001b[39m            SELECT DISTINCT prop\u001b[39m\u001b[39m'''\u001b[39m\n\u001b[1;32m----> <a href='vscode-notebook-cell:/c%3A/Users/17204/Documents/git/MSDS459_project/scraper/Development.ipynb#X34sZmlsZQ%3D%3D?line=5'>6</a>\u001b[0m     search_dict[prop] \u001b[39m=\u001b[39m client\u001b[39m.\u001b[39mquery(query_string)\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/17204/Documents/git/MSDS459_project/scraper/Development.ipynb#X34sZmlsZQ%3D%3D?line=7'>8</a>\u001b[0m search_dict\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'search_dict' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "num_props = ['num_strings','scale_length','num_frets']\n",
+    "for prop in num_props:\n",
+    "    query_string = f'''WITH prop :=\n",
+    "            (SELECT Guitar.{prop} filter Guitar.{prop} != 0)\n",
+    "            SELECT DISTINCT prop'''\n",
+    "    search_dict[prop] = client.query(query_string)\n",
+    "\n",
+    "search_dict"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Acoustic-electric'"
+      ]
+     },
+     "execution_count": 39,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "test_str = 'Acoustic-electric'\n",
+    "match = re.search('[A|a]coustic[ |-][E|e]lectric', test_str).group(0)\n",
+    "match"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
@@ -419,43 +467,162 @@
        " 'num_frets': []}"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "num_props = ['num_strings','scale_length','num_frets']\n",
-    "for prop in num_props:\n",
-    "    query_string = f'''WITH prop :=\n",
-    "            (SELECT Guitar.{prop} filter Guitar.{prop} != 0)\n",
-    "            SELECT DISTINCT prop'''\n",
-    "    search_dict[prop] = client.query(query_string)\n",
-    "\n",
     "search_dict"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [
     {
-     "ename": "IndexError",
-     "evalue": "no such group",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mIndexError\u001b[0m                                Traceback (most recent call last)",
-      "\u001b[1;32mc:\\Users\\17204\\Documents\\git\\MSDS459_project\\scraper\\Development.ipynb Cell 27\u001b[0m in \u001b[0;36m<cell line: 2>\u001b[1;34m()\u001b[0m\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/17204/Documents/git/MSDS459_project/scraper/Development.ipynb#X35sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m test_str \u001b[39m=\u001b[39m \u001b[39m'\u001b[39m\u001b[39mAcoustic-electric\u001b[39m\u001b[39m'\u001b[39m\n\u001b[1;32m----> <a href='vscode-notebook-cell:/c%3A/Users/17204/Documents/git/MSDS459_project/scraper/Development.ipynb#X35sZmlsZQ%3D%3D?line=1'>2</a>\u001b[0m match \u001b[39m=\u001b[39m re\u001b[39m.\u001b[39;49msearch(\u001b[39m'\u001b[39;49m\u001b[39m[A|a]coustic[ |-][E|e]lectric\u001b[39;49m\u001b[39m'\u001b[39;49m, test_str)\u001b[39m.\u001b[39;49mgroup(\u001b[39m1\u001b[39;49m)\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/17204/Documents/git/MSDS459_project/scraper/Development.ipynb#X35sZmlsZQ%3D%3D?line=2'>3</a>\u001b[0m \u001b[39mmatch\u001b[39;00m\n",
-      "\u001b[1;31mIndexError\u001b[0m: no such group"
+     "data": {
+      "text/plain": [
+       "{'body_shape': ['Concert'],\n",
+       " 'cutaway': [],\n",
+       " 'pickups': [],\n",
+       " 'type': ['Acoustic'],\n",
+       " 'country_of_origin': [],\n",
+       " 'num_strings': [],\n",
+       " 'scale_length': [],\n",
+       " 'num_frets': []}"
+      ]
+     },
+     "execution_count": 61,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "out_dict = {}\n",
+    "for key,value in search_dict.items():\n",
+    "    out_dict[key] = [item for item in ['Concert','Acoustic'] if item in value]\n",
+    "\n",
+    "out_dict"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "aa = []\n",
+    "aa.append('123')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['123']\n"
      ]
     }
    ],
    "source": [
-    "test_str = 'Acoustic-electric'\n",
-    "match = re.search('[A|a]coustic[ |-][E|e]lectric', test_str).group(0)\n",
-    "match"
+    "print(aa)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "query_str = 'SELECT Guitar {model, description} filter .type in {\"Electric\"} limit 5;'\n",
+    "with edgedb.create_client(dsn='MSDS_459') as client:\n",
+    "\n",
+    "    guitars = client.query(query_str)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "edgedb.Object"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "type(guitars[0])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['description', 'id', 'model']"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dir(guitars[0])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "guitar_dict = {}\n",
+    "for i_guitar,guitar in enumerate(guitars):\n",
+    "    guitar_dict[i_guitar] = {'model':guitar.model, 'description':guitar.description}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{0: {'model': 'SP7F Spectre Electric Guitar', 'description': ''},\n",
+       " 1: {'model': 'G&amp;L Fullerton Deluxe ASAT Special Left Handed Electric Guitar',\n",
+       "  'description': 'The left-handed Gu0026L ASAT Special just might be the quintessential Gu0026L guitar, viewed by many as the ultimate single-cutaway. Back in 1985, this model was launched under the Gu0026L Broadcaster name, which prompted a response from Fred Gretsch of Gretsch Guitars over the name as Broadkaster is owned by Gretsch. The name then became “ASAT” which is US military shorthand for an “Anti-Satellite” missile. The ASAT Special, as the model became known, features jumbo single-coil Magnetic Field Design pickups, each with a narrow bobbin aperture for a coil which is shallow yet wide. In this regard, an MFD jumbo single coil is similar to a P-90 or Jazzmaster pickup, but the MFD principle provides a punchier bottom end and brighter top end that sparkles with harmonics. With the addition of his innovative Saddle-Lock bridge which transfers string energy right into the body end-grain for an incredibly resonant instrument, the ASAT Special is one of the most versatile guitars ever, serving up everything from ballsy twang to searing blues and smooth jazz tones.'},\n",
+       " 2: {'model': 'DW CE24 24 Floyd Electric Guitar',\n",
+       "  'description': 'The PRS DW CE24 24 Floyd electric is the signature guitar of American guitarist Dustie Waring of the progressive metal band Between the Buried and Me. With a sound that is both heavy and melodic, lush and menacing, this guitar demands a versatility without sacrificing tone or comfort. This model starts with the PRS CE bolt-on platform and includes a satin-finished maple neck, maple fretboard, a slightly modified Pattern Thin neck carve (Waring’s carve is slightly thinner front to back) and a Floyd Rose tremolo system. The 24 Floyd is also equipped with Waring’s signature Mojotone “DW Tomahawk” pickups. Made with a blend of ceramic and alnico magnets and a special winding technique, DW Tomahawks have plenty of output and big bottom end while remaining articulate and clear—a unique quality for high gain pickups. Paired with a volume and tone control and 5-way blade pickup selector which have all been shifted slightly to allow plenty of room to work the tremolo, the DW CE 24 “Floyd” is comfortable, fun and inspiring to play.'},\n",
+       " 3: {'model': 'Gibson Custom Murphy Lab 1957 Les Paul Custom Reissue 3-Pickup Bigsby Light Aged Electric Guitar',\n",
+       "  'description': 'The Gibson Custom 1957 Murphy Lab Les Paul Custom pays tribute to a guitar that Paul thought looked particularly good onstage. The '},\n",
+       " 4: {'model': 'DW CE24 Hardtail Limited-Edition Electric Guitar',\n",
+       "  'description': 'The limited-edition PRS DW CE 24 brings Dustie Waring’s signature specs to a tremless guitar. This signature model of the Between the Buried u0026amp; Me guitarist starts with the PRS CE 24 bolt-on platform, and includes a satin-finished maple neck with maple fretboard and a slightly modified Pattern Thin neck carve, plus a hardtail bridge which is exclusive to this limited-edition model. The pickups are Waring’s signature Mojotone DW Tomahawk Gen 2 pickups. Made with both ceramic and alnico magnets, and a special winding technique, DW Tomahawks have plenty of output and big bottom end while remaining articulate and clear—a notable quality for high-gain pickups. Paired with a volume and tone control, as well as a 5-way blade pickup selector, the DW CE 24 hardtail is menacing, sophisticated and addictive to play. The limited-edition DW CE 24 hardtail also comes with satin black hardware.'}}"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "guitar_dict"
    ]
   },
   {
