--- a/scraper/Development.ipynb
+++ b/scraper/Development.ipynb
@@ -20,6 +20,8 @@
     "# import time\n",
     "from bs4 import BeautifulSoup\n",
     "import edgedb\n",
+    "import os\n",
+    "\n",
     "import numpy as np\n",
     "# import json\n"
    ]
@@ -40,18 +42,7 @@
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\Kevin\\AppData\\Local\\Temp\\ipykernel_12060\\4215609556.py:4: DeprecationWarning: headless property is deprecated, instead use add_argument('-headless')\n",
-      "  options.headless = True\n",
-      "C:\\Users\\Kevin\\AppData\\Local\\Temp\\ipykernel_12060\\4215609556.py:5: DeprecationWarning: executable_path has been deprecated, please pass in a Service object\n",
-      "  driver = webdriver.Firefox(executable_path=\"C:\\Program Files\\GeckoDriver\\geckodriver.exe\", options=options)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "\n",
     "\n",
@@ -478,27 +469,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "IndexError",
-     "evalue": "no such group",
-     "output_type": "error",
-     "traceback": [
-      "\u001B[1;31m---------------------------------------------------------------------------\u001B[0m",
-      "\u001B[1;31mIndexError\u001B[0m                                Traceback (most recent call last)",
-      "\u001B[1;32mc:\\Users\\17204\\Documents\\git\\MSDS459_project\\scraper\\Development.ipynb Cell 27\u001B[0m in \u001B[0;36m<cell line: 2>\u001B[1;34m()\u001B[0m\n\u001B[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/17204/Documents/git/MSDS459_project/scraper/Development.ipynb#X35sZmlsZQ%3D%3D?line=0'>1</a>\u001B[0m test_str \u001B[39m=\u001B[39m \u001B[39m'\u001B[39m\u001B[39mAcoustic-electric\u001B[39m\u001B[39m'\u001B[39m\n\u001B[1;32m----> <a href='vscode-notebook-cell:/c%3A/Users/17204/Documents/git/MSDS459_project/scraper/Development.ipynb#X35sZmlsZQ%3D%3D?line=1'>2</a>\u001B[0m match \u001B[39m=\u001B[39m re\u001B[39m.\u001B[39;49msearch(\u001B[39m'\u001B[39;49m\u001B[39m[A|a]coustic[ |-][E|e]lectric\u001B[39;49m\u001B[39m'\u001B[39;49m, test_str)\u001B[39m.\u001B[39;49mgroup(\u001B[39m1\u001B[39;49m)\n\u001B[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/17204/Documents/git/MSDS459_project/scraper/Development.ipynb#X35sZmlsZQ%3D%3D?line=2'>3</a>\u001B[0m \u001B[39mmatch\u001B[39;00m\n",
-      "\u001B[1;31mIndexError\u001B[0m: no such group"
-     ]
-    }
-   ],
-   "source": [
-    "print(aa)"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 10,
    "metadata": {},
    "outputs": [],
@@ -586,6 +556,60 @@
    ],
    "source": [
     "guitar_dict"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open(\"product_urls.txt\", \"r\") as file:\n",
+    "    url_list = file.read().splitlines()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5582: /PRS/S2-Singlecut-McCarty-594-Electric-Guitar-McCarty-Sunburst-1500000315350.gc\n"
+     ]
+    },
+    {
+     "ename": "NameError",
+     "evalue": "name 'os' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32mc:\\Users\\17204\\Documents\\git\\MSDS459_project\\scraper\\Development.ipynb Cell 35\u001b[0m in \u001b[0;36m<cell line: 2>\u001b[1;34m()\u001b[0m\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/17204/Documents/git/MSDS459_project/scraper/Development.ipynb#X46sZmlsZQ%3D%3D?line=9'>10</a>\u001b[0m \u001b[39m# Save the HTML to a file.\u001b[39;00m\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/17204/Documents/git/MSDS459_project/scraper/Development.ipynb#X46sZmlsZQ%3D%3D?line=10'>11</a>\u001b[0m \u001b[39m# Everything before the slash is the directory, everything after except the \".gc\" is the file name.\u001b[39;00m\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/17204/Documents/git/MSDS459_project/scraper/Development.ipynb#X46sZmlsZQ%3D%3D?line=11'>12</a>\u001b[0m \u001b[39m# If the subdirectory doesn't exist, create it.\u001b[39;00m\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/17204/Documents/git/MSDS459_project/scraper/Development.ipynb#X46sZmlsZQ%3D%3D?line=12'>13</a>\u001b[0m subDir \u001b[39m=\u001b[39m url_partial[\u001b[39m1\u001b[39m:url_partial\u001b[39m.\u001b[39mrfind(\u001b[39m'\u001b[39m\u001b[39m/\u001b[39m\u001b[39m'\u001b[39m)]\n\u001b[1;32m---> <a href='vscode-notebook-cell:/c%3A/Users/17204/Documents/git/MSDS459_project/scraper/Development.ipynb#X46sZmlsZQ%3D%3D?line=13'>14</a>\u001b[0m \u001b[39mif\u001b[39;00m \u001b[39mnot\u001b[39;00m os\u001b[39m.\u001b[39mpath\u001b[39m.\u001b[39mexists(\u001b[39mf\u001b[39m\u001b[39m\"\u001b[39m\u001b[39m{\u001b[39;00msaveDir\u001b[39m}\u001b[39;00m\u001b[39m/\u001b[39m\u001b[39m{\u001b[39;00msubDir\u001b[39m}\u001b[39;00m\u001b[39m\"\u001b[39m):\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/17204/Documents/git/MSDS459_project/scraper/Development.ipynb#X46sZmlsZQ%3D%3D?line=14'>15</a>\u001b[0m     os\u001b[39m.\u001b[39mmakedirs(\u001b[39mf\u001b[39m\u001b[39m\"\u001b[39m\u001b[39m{\u001b[39;00msaveDir\u001b[39m}\u001b[39;00m\u001b[39m/\u001b[39m\u001b[39m{\u001b[39;00msubDir\u001b[39m}\u001b[39;00m\u001b[39m\"\u001b[39m)\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/17204/Documents/git/MSDS459_project/scraper/Development.ipynb#X46sZmlsZQ%3D%3D?line=15'>16</a>\u001b[0m \u001b[39mwith\u001b[39;00m \u001b[39mopen\u001b[39m(\u001b[39mf\u001b[39m\u001b[39m\"\u001b[39m\u001b[39m{\u001b[39;00msaveDir\u001b[39m}\u001b[39;00m\u001b[39m/\u001b[39m\u001b[39m{\u001b[39;00murl_partial[\u001b[39m1\u001b[39m:\u001b[39m-\u001b[39m\u001b[39m3\u001b[39m]\u001b[39m}\u001b[39;00m\u001b[39m.html\u001b[39m\u001b[39m\"\u001b[39m, \u001b[39m\"\u001b[39m\u001b[39mw\u001b[39m\u001b[39m\"\u001b[39m, encoding\u001b[39m=\u001b[39m\u001b[39m'\u001b[39m\u001b[39mutf-8\u001b[39m\u001b[39m'\u001b[39m) \u001b[39mas\u001b[39;00m file:\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'os' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "n_urls = len(url_list)\n",
+    "for i in range(n_urls-1000, n_urls): # can modify this to only download a subset of the urls at a time\n",
+    "    # Construct the full URL\n",
+    "    url_partial = url_list[i]\n",
+    "    print(f\"{i}: {url_partial}\")\n",
+    "    url = \"https://www.guitarcenter.com\" + url_partial\n",
+    "    driver.get(url)\n",
+    "    html = scrape_utils.gc_get_all_reviews(driver, url)\n",
+    "\n",
+    "    # Save the HTML to a file.\n",
+    "    # Everything before the slash is the directory, everything after except the \".gc\" is the file name.\n",
+    "    # If the subdirectory doesn't exist, create it.\n",
+    "    subDir = url_partial[1:url_partial.rfind('/')]\n",
+    "    if not os.path.exists(f\"{saveDir}/{subDir}\"):\n",
+    "        os.makedirs(f\"{saveDir}/{subDir}\")\n",
+    "    with open(f\"{saveDir}/{url_partial[1:-3]}.html\", \"w\", encoding='utf-8') as file:\n",
+    "        file.write(html)"
    ]
   },
   {
