--- a/scraper/Development.ipynb
+++ b/scraper/Development.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -570,7 +570,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -594,7 +594,7 @@
    ],
    "source": [
     "n_urls = len(url_list)\n",
-    "for i in range(n_urls-1000, n_urls): # can modify this to only download a subset of the urls at a time\n",
+    "for i in range(n_urls-10, n_urls): # can modify this to only download a subset of the urls at a time\n",
     "    # Construct the full URL\n",
     "    url_partial = url_list[i]\n",
     "    print(f\"{i}: {url_partial}\")\n",
@@ -610,6 +610,15 @@
     "        os.makedirs(f\"{saveDir}/{subDir}\")\n",
     "    with open(f\"{saveDir}/{url_partial[1:-3]}.html\", \"w\", encoding='utf-8') as file:\n",
     "        file.write(html)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "driver.close()"
    ]
   },
   {
