BERT embeddings into the database.

--- a/scraper/Development.ipynb
+++ b/scraper/Development.ipynb
@@ -10,10 +10,6 @@
     "#\n",
     "# Scrapes data about guitars and reviews from a few different sources,\n",
     "# then uses that data to populate an EdgeDB instance\n",
-    "#\n",
-    "# Much of the scraper code is just refactoring of Joe's GuitarCenter code, \n",
-    "# put into a little more organized piece of code\n",
-    "\n",
     "\n",
     "from selenium import webdriver\n",
     "from selenium.webdriver.firefox.options import Options\n",
@@ -243,19 +239,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Downloading HTML pages for 1000 pages\n",
-      "Time to change the VPN 314 of 1000\n",
-      "[-------             ] 315 of 1000\r"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "n_urls = len(url_list)\n",
     "scrape_start = n_urls-1000\n",
@@ -300,7 +286,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -309,9 +295,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Adding guitars to the database\n",
+      "[--------------------]   6581/6582\n",
+      "\n",
+      "Upload Statistics:\n",
+      "\t305 Guitars added\n",
+      "\t1096 Guitars were already in the database\n",
+      "\t5181 html files were missing\n",
+      "\t0 attempts failed for unknown reasons\n"
+     ]
+    }
+   ],
    "source": [
     "print(\"Adding guitars to the database\")\n",
     "add_list = []\n",
@@ -362,6 +363,72 @@
     "print(f\"\\t{len(skip_list)} Guitars were already in the database\")\n",
     "print(f\"\\t{len(miss_list)} html files were missing\")\n",
     "print(f\"\\t{len(fail_list)} attempts failed for unknown reasons\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "guitar_description = client.query('''\n",
+    "            SELECT Guitar.description\n",
+    "            OFFSET 30 LIMIT 1\n",
+    "    ''')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "guitar_description"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "BERT_model = scrape_utils.BERT_embed_model()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "out_test = BERT_model.predict(guitar_description)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "out_test['encoder_outputs'][0].tolist()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "out_test['encoder_outputs'][0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "len(np.array([]))"
    ]
   },
   {
